# multi_attach_mail

./: .gitignore  Makefile  README.md  multi_attach_mail.py  pyproject.toml
.github/workflows/: bandit.yml  codeql.yml  mega-linter.yml  pylint.yml  pysa.yml  wps.yml
.trunk/: trunk.yaml
