[tool.poetry]
name = "multi-attach-mail"
version = "0.1.0"
description = ""
authors = ["Dr. Bastian Ebeling <230051+Barry1@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "multi_attach_mail" }]

[tool.poetry.dependencies]
python = "^3.10"
aiosmtplib = ">=2"


[tool.poetry.dependencies.valuefragments]
git = "https://github.com/Barry1/PyValueFragments"

[tool.poetry.group.dev.dependencies]
black = ">=23"
pylint = ">=2.17"
pylama = ">=8.4"
pyright = ">=1.1"
pyre-check = ">=0.9"
autopep8 = ">=2"
mypy = "^1.1.1"
types-pyyaml = "^6.0.12.9"

[tool.poetry.group.dev.dependencies.pydocstyle]
extras = ["toml"]
version = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylama]
verbose = true
#linters = "mccabe,mypy,pycodestyle,pydocstyle,pyflakes,pylint,isort"
linters = "mccabe,mypy,pycodestyle,pyflakes,pylint,isort"
